# vixargs

./: Cargo.toml  README.md  commands
.github/workflows/: rust.yml
src/: main.rs
